Fix style overlap between .right in .hero-header and .sign-up

--- a/style.css
+++ b/style.css
@@ -224,7 +224,7 @@ body {
     /* border: 2px solid red; */
 }
 
-.right {
+.sign-up .right {
     border: 2px solid white;
     padding: 0;
     border-radius: 8px;
